--- a/cnlatex/activities.tex
+++ b/cnlatex/activities.tex
@@ -2,9 +2,9 @@
 \mycvitemac{自2019}{空间生命历程流行病学研究中心}{\songti{成员}}
 \mycvitemac{自2019}{GeoDa Center, rgeoda, libgeoda Github项目组}{\songti{贡献者}}
 \mycvitemac{自2015}{微信公众号'一览众山小 可持续城市与交通'}{\songti{志愿者}}
-\mycvitemac{自2020}{GISphere}{\songti{编委,成员}}
+\mycvitemac{2020-2023}{GISphere}{\songti{编委,成员}}
 \mycvitemac{2018-2020}{阿里云栖社区}{\songti{认证专家}}
 \mycvitemac{2017-2019}{国际景观生态学会中国分会(IALE-China)}{\songti{会员}}
 \mycvitemac{2016-2017}{拜客绿色出行}{\songti{志愿者}}
 \mycvitemac{2013-2017}{青年地理学刊}{\songti{创刊人,主编,副主编,主编助理}}
-\mycvitemacl{自2019}{European Heart Journal, Data in Brief, The Journal of Open Source Software, 上海城市规划}{\songti{审稿人}}
+\mycvitemacl{自2019}{European Heart Journal, Sustainable Cities and Society, Cities, Frontiers in Public Health, International Journal of Digital Earth, Scientific Reports, Data in Brief, The Journal of Open Source Software, 上海城市规划}{\songti{审稿人}}
