--- a/cnlatex/presentation.tex
+++ b/cnlatex/presentation.tex
@@ -1,4 +1,6 @@
 \section{\texorpdfstring{\faCommentsO\ 汇报}{汇报}}
+\mycvitemXP{2023.05.19}{\songti{兴趣引导创造的火花，但坚持才能星火燎原(\textbf{受邀})}}{\songtix{高一三班}}{中国,福建省厦门第一中学}
+\mycvitemXP{2022.08.18}{Do neighborhood boundaries matter for examining the associations between environmental factors and obesity(\textbf{受邀})}{The 29th International Conference on Geoinformatics in 2022 session 10-2 GIScience for Public Health}{中国，中国地质大学(北京)}
 \mycvitemXP{2020.12.12}{\songti{春节期间的PM2.5污染短期暴露健康效应评估——以长三角地区25个城市为例(\textbf{受邀})}}{第十六次空间行为与规划研究会暨数字化与精细化治理学术研讨会}{中国,厦门大学}
 \mycvitemXP{2020.08.07}{\songti{什么是地理学——从新冠疫情到北斗卫星(\textbf{受邀})}}{\songtix{同安第一中学地理组}}{中国,福建省同安第一中学}
 \mycvitemXP{2018.05.27}{\songti{地理要素的尺度,分区效应,可变面积单元问题与空间统计的挑战}}{\songtix{第十一届中国R语言会议}}{中国,北京人民大学}
