--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -14,130 +14,160 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
+    Peng Jia, Yuanyuan Shi, Qi Jiang, \Shaoqing,Bin Yu, Shuhan Yang, Ge Qiu, Shujuan Yang. (2023).
+    Environmental determinants of childhood obesity: a meta-analysis.
+    \textit{The Lancet Global Health}. \textit{11}, S7.
+    \DOI{10.1016/S2214-109X(23)00092-X}. [SCI, IF = 34.3].
+\item
+    Shudi Zuo, \Shaoqing, Jiaheng Ju, Fanxin Meng, Yin Ren, Yunfeng Tian, Kaide Wang. (2022).
+    The importance of the functional mixed entropy for the explanation of residential and transport CO$_2$ emissions in the urban center of China.
+    \textit{Journal of Cleaner Production}. \textit{380}, 134947.
+    \DOI{10.1016/j.jclepro.2022.134947}. [SCI, IF = 11.1].
+\item
+    Pengxin Zhang, Shuhan Yang, \Shaoqing, Darren How Jin Aik, Shujuan Yang, Peng Jia. (2022).
+    Global spreading of Omicron variant of COVID-19.
+    \textit{Geospatial Health}. \textit{17}.
+    \DOI{10.4081/gh.2022.1083}. [SCI, IF = 1.7].
+\item
+    Yupeng Liu, Jiajia Li, Weiqiang Chen, Lulu Song, \Shaoqing. (2022).
+    Quantifying urban mass gain and loss by a GIS‐based material stocks and flows analysis.
+    \textit{Journal of Industrial Ecology}. \textit{26}(3), 1051-1060.
+    \DOI{10.1111/jiec.13252}. [SCI, IF = 5.9].
+\item
+    Weichao Wang, Xian Liu, Changwen Zhang, Fei Sheng, Shanjun Song, Penghui Li, \Shaoqing, Bin Wang, Dawei Lu, Luyao Zhang, Xuezhi Yang, Zhihong Zhang, Sijin Liu, Aiqian Zhang, Qian Liu, Guibin Jiang. (2022).
+    Identification of two-dimensional copper signatures in human blood for bladder cancer with machine learning.
+    \textit{Chemical Science}. \textit{13}(6), 1648-1656.
+    \DOI{10.1039/D1SC06156A}. [SCI, IF = 8.4].
+\item
+    \Shaoqing\CF, Xiaoman Zheng\CF, Lei Gao, Chengdong Xu, Shudi Zuo, Qi Chen, Xiaohua Wei, Yin Ren. (2021).
+    Improving plot-level model of forest biomass: A combined approach using machine learning with spatial statistics.
+    \textit{Forests}. \textit{12}(12), 1663.
+    \DOI{10.3390/f12121663}. [SCI, IF = 2.9].
+\item
     Peng Jia, \Shaoqing, Tong Wu, Shujuan Yang. (2021).
     New approaches to anticipate the risk of reverse zoonosis.
     \textit{Trends in Ecology \& Evolution}. \textit{36}(7), 580-590.
-    \DOI{10.1016/j.tree.2021.03.012}. [SCI, IF = 17.712].
+    \DOI{10.1016/j.tree.2021.03.012}. [SCI, IF = 16.8].
 \item
     Panfeng Dou, Shudi Zuo, Yin Ren, Manuel J. Rodriguez, \Shaoqing. (2021).
     Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
     \textit{Journal of Environmental Management}. \textit{290}, 112588.
-    \DOI{10.1016/j.jenvman.2021.112588}. [SCI, IF = 6.789].
+    \DOI{10.1016/j.jenvman.2021.112588}. [SCI, IF = 8.7].
 \item
     Shujuan Yang, \Shaoqing, Yuling Huang, Peng Jia. (2021).
     Pitfalls in Modeling Asymptomatic COVID-19 Infection.
     \textit{Frontiers in Public Health}. \textit{9}, 593176.
-    \DOI{10.3389/fpubh.2021.593176}. [SCI, IF = 3.709].
+    \DOI{10.3389/fpubh.2021.593176}. [SCI, IF = 5.2].
 \item
     Lulu Song, \Shaoqing, Zhi Cao, Yupeng Liu, Weiqiang Chen. (2021).
     High spatial resolution mapping of steel resources accumulated above ground in mainland China: Past trends and future prospects.
     \textit{Journal of Cleaner Production}. \textit{297}, 144609.
-    \DOI{10.1016/j.jclepro.2021.126482}. [SCI, IF = 9.297].
+    \DOI{10.1016/j.jclepro.2021.126482}. [SCI, IF = 11.1].
 \item
     Shudi Zuo, Lianping Yang, Panfeng Dou, Hung Chak Ho, \Shaoqing, Wenjun Ma, Yin Ren, Cunrui Huang. (2020).
     The direct and interactive impacts of hydrological factors on bacillary dysentery across different geographical regions in central China.
     \textit{Science of the Total Environment}. \textit{764}, 144609.
-    \DOI{10.1016/j.scitotenv.2020.144609}. [SCI, IF = 7.963].
+    \DOI{10.1016/j.scitotenv.2020.144609}. [SCI, IF = 9.8].
 \item
     \Shaoqing\CF, Yin Ren\CF, Shudi Zuo, Chengyi Lai, Jiajia Li, Shengyu Xie, Bingchu Chen. (2020).
     Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China. 
     \textit{Remote Sensing}. \textit{12}(23), 3932.
-    \DOI{10.3390/rs12233932}. [SCI, IF = 4.848].
+    \DOI{10.3390/rs12233932}. [SCI, IF = 5.0].
 \item
     {\heiti{戴劭勍}}, 李佳佳, 杨维旭, 陈方煜, 江辉仙. (2020).
     春节期间的PM2.5污染短期暴露健康效应评估——以长三角地区25个城市为例.
     \textit{上海城市规划}. \textit{05}, 22-29.
-    \DOI{10.11982/j.supr.20200504}. [北大核心, 复合影响因子 = 2.238] 
+    \DOI{10.11982/j.supr.20200504}. [北大核心, 复合影响因子 = 1.919] 
 \item
     Peng Jia, \Shaoqing, Kristen. E. Rohli, Robert V. Rohli, Yanan Ma, Chao Yu, Xiongfeng Pan, Weiqi Zhou. (2020).
     Natural environment and childhood obesity: A systematic review.
     \textit{Obesity Reviews}. 1-9.
-    \DOI{10.1111/obr.13097}. [SCI, IF = 9.213].
+    \DOI{10.1111/obr.13097}. [SCI, IF = 8.9].
 \item
     XiaoFang Pan, Hu Li, Lixin Zhao, Xiaoru Yang, Jianqiang Su, \Shaoqing, Jing Ning, Chunxing Li, Guanjing Cai, GeFu Zhu. (2020).
     Response of syntrophic bacterial and methanogenic archaeal communities in paddy soil to soil type and phenological period of rice growth.
     \textit{Journal of Cleaner Production}. \textit{278}, 123418.
-    \DOI{10.1016/j.jclepro.2020.123418}. [SCI, IF = 9.297].
+    \DOI{10.1016/j.jclepro.2020.123418}. [SCI, IF = 11.1].
 \item
     Peng Jia, Xinxi Cao, Hongxi Yang, \Shaoqing, Pan He, Ganlin Huang, Tong Wu, Yaogang Wang. (2020).
     Green space access in the neighbourhood and childhood obesity.
     \textit{Obesity Reviews}. 1-12.
-    \DOI{10.1111/obr.13100}. [SCI, IF = 9.213].
+    \DOI{10.1111/obr.13100}. [SCI, IF = 8.9].
 \item
     Miyang Luo, Hanqi Li, Xiongfeng Pan, Teng Fei, \Shaoqing, Ge Qiu, Yuxuan Zou, Heleen Vos, Jiayou Luo, Peng Jia. (2020).
     Neighbourhood speed limit and childhood obesity.
     \textit{Obesity Reviews}. 1-11.
-    \DOI{10.1111/obr.13052}. [SCI, IF = 9.213].
+    \DOI{10.1111/obr.13052}. [SCI, IF = 8.9].
 \item
     Shengyu Xie, Guangwei Yu, Chunxing Li, Jie Li, Gang Wang, \Shaoqing, Yin Wang. (2020).
     Treatment of high-ash industrial sludge for producing improved char with low heavy metal toxicity.
     \textit{Journal of Analytical and Applied Pyrolysis}. \textit{150}, 104866.
-    \DOI{10.1016/j.jaap.2020.104866}. [SCI, IF = 5.541].
+    \DOI{10.1016/j.jaap.2020.104866}. [SCI, IF = 6.0].
 \item
     Xiongfeng Pan, Li Zhao, Jiayou Luo, Yinhao Li, Lin Zhang, Tong Wu, Melody Smith, \Shaoqing, Peng Jia. (2020).
     Access to bike lanes and childhood obesity: A systematic review and meta‐analysis.
     \textit{Obesity Reviews}. 1-11.
-    \DOI{10.1111/obr.13042}. [SCI, IF = 9.213].
+    \DOI{10.1111/obr.13042}. [SCI, IF = 8.9].
 \item
     \Shaoqing, Shudi Zuo, Yin Ren. (2020).
     A spatial database of CO$_2$ emissions, urban form fragmentation and city-scale effect related impact factors for the low carbon urban system in Jinjiang city, China.
     \textit{Data in Brief}. \textit{29}, 105274.
-    \DOI{10.1016/j.dib.2020.105274}. [ESCI, CiteScore = 1.7].
+    \DOI{10.1016/j.dib.2020.105274}. [ESCI, IF = 1.2].
 \item
     Shudi Zuo, \Shaoqing, Yin Ren. (2019).
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
     \textit{Journal of Cleaner Production}. \textit{244}, 118659.
-    \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 9.297].
+    \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 11.1].
 \item
     窦攀烽, 左舒翟, 任引, {\heiti{戴劭勍}}, 云国梁. (2019).
     气候和土地利用/覆被变化对宁波地区生态系统产水服务的影响.
     {\songtix{环境科学学报}}. \textit{39}(7), 2398-2409.
-    \DOI{10.13671/j.hjkxxb.2019.0122}. [CSCD, 复合影响因子 = 2.480] 
+    \DOI{10.13671/j.hjkxxb.2019.0122}. [CSCD, 复合影响因子 = 3.139] 
 \item
     Qing Yang, Tianyue Huang, Saige Wang, Jiashuo Li, \Shaoqing, Sebastian Wright, Yuxuan Wang, Huaiwu Peng. (2019).
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
     \textit{Applied Energy}. \textit{247}, 254-269.
-    \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 9.746].
+    \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 11.2].
 \item
     Guoliang Yun, Yuanrong He, Yuantong Jiang, Panfeng Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
     \textit{Atmosphere}. \textit{10}(2), 55.
-    \DOI{10.3390/atmos10020055}. [SCI, IF = 2.686].
+    \DOI{10.3390/atmos10020055}. [SCI, IF = 2.9].
 \item
     Shudi Zuo, \Shaoqing, Xiaodong Song, Chengdong Xu, Yilan Liao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren. (2018).
     Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models. 
     \textit{Remote Sensing}. \textit{10}(11), 1814.
-    \DOI{10.3390/rs10111814}. [SCI, IF = 4.848].
+    \DOI{10.3390/rs10111814}. [SCI, IF = 5.0].
 \item
     Shudi Zuo, \Shaoqing, Yaying Li, Jianfeng Tang, Yin Ren. (2018).
 	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
     \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175.
-    \DOI{10.3390/ijerph15102175}. [SCI, IF = 3.390].
+    \DOI{10.3390/ijerph15102175}. [SSCI, IF = 4.614].
 \item
     {\heiti{戴劭勍}}, 江辉仙, 李佳佳, 苏娴, 吴娟, 任引. (2018).
 	H市城区步行环境对两抢一盗警情的影响.
     {\songtix{地理科学}}.  \textit{38}(8), 1235-1244.
-    \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, 复合影响因子 = 5.509]
+    \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, 复合影响因子 = 6.524]
 \item
     Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren. (2018).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
     \textit{Remote Sensing}. \textit{10}(4), 521.
-    \DOI{10.3390/rs10040521}. [SCI, IF = 4.848].
+    \DOI{10.3390/rs10040521}. [SCI, IF = 5.0].
 \item
     叶琴, 曾刚, {\heiti{戴劭勍}}, 王丰龙. (2018).
 	不同环境规制工具对中国节能减排技术创新的影响——基于285个地级市面板数据.
     {\songtix{中国人口·资源与环境}}. \textit{28}(02), 115-122.
-    \DOI{10.12062/cpre.20170915}. [CSCD, 复合影响因子 = 6.010]
+    \DOI{10.12062/cpre.20170915}. [CSCD, 复合影响因子 = 7.598]
 \item
     Qin Ye, \Shaoqing, Gang Zeng. (2017).
 	Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
     \textit{Chinese Journal of Population Resources and Environment}. \textit{16}(1), 1-11.
-    \DOI{10.1080/10042857.2017.1418273}. [ESCI, CiteScore = 2.7].
+    \DOI{10.1080/10042857.2017.1418273}. [ESCI, IF = 9.3].
 \item
    李苗裔, {\heiti{戴劭勍}}, 王静远, 沈振江. (2016).
 	基于政府大数据的北京城市空间发展模式分析.
     {\songtix{地理信息世界}}. \textit{23}(3), 20-26.
-    \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [JST, 复合影响因子 = 1.128]
+    \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [JST, 复合影响因子 = 1.391]
 %\end{etaremune}
 \end{enumerate}
 
@@ -162,16 +192,13 @@
 \begin{enumerate}
 \item
      任引, 郑小曼, {\heiti{戴劭勍}}, 陈奇, 左舒翟.
-     结合源解析与机器学习以提升森林生物量的估算精度.
-     ({\songtix{实审}}).
+     结合源解析与机器学习以提升森林生物量的估算精度..
 \item
      任引, {\heiti{戴劭勍}}, 左舒翟, 郑小曼.
      一种多源数据融合的森林资源清查生物量估算模型.
-     ({\songtix{实审}}).
 \item
      陈奇, 任引, 郑小曼, 左舒翟, {\heiti{戴劭勍}}.
-     一种预测大面积亚热带森林生物量的混合效应模型.
-     ({\songtix{实审}}).
+     一种预测大面积亚热带森林生物量的混合效应模型..
 %\end{etaremune}
 \end{enumerate}
 
@@ -254,29 +281,34 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    \Shaoqing\CF, Xiaoman Zheng\CF, Lei Gao, Chengdong Xu, Shudi Zuo, Qi Chen, Xiaohua Wei, Yin Ren.
-    Improving plot-level model of forest aboveground biomass: A combined approach using machine learning with spatial statistics.
-    \textit{Ecosphere}. 
+    \Shaoqing, Alfred Stein, Yuchen Li, Shujuan Yang, Peng Jia.
+    Street view imagery for built environment auditing: a systematic review.
+    \textit{International Journal of Geographical Information Science}. 
+    (\Revision).
+\item
+    \Shaoqing, Wufan Zhao, Yanwen Wang, Xiao Huang, Zhidong Chen, Jinghan Lei, Alfred Stein, Peng Jia.
+    Assessing Spatiotemporal Bikeability Using Multi-Source Geospatial Big Data: A Case Study of Xiamen, China.
+    \textit{International Journal of Applied Earth Observation and Geoinformation}. 
     (\Review).
+\item
+    \Shaoqing, Frank Badu Osei, Peng Jia, Alfred Stein.
+    Mapping of hourly street-level PM2.5 concentrations using an ensemble-random forest model and multi-source geospatial data.
+    \textit{Environmental Science \& Technology}. 
+    (\Submitted).
 \item
     Xiaoman Zheng, \Shaoqing, Qi Chen, Kim Calders, Chengdong Xu, Xiaohua Wei, Mazhan Zhuang, Yin Ren.
     Integrating Spatial Statistics and Machine Learning to Analyze Error Sources in Estimating Forest Aboveground Biomass from Airborne LiDAR Data.
-    \textit{Agricultural and Forest Meteorology}. 
+    \textit{}. 
     (\Revision).
 \item
-    Weichao Wang, Xian Liu, Changwen Zhang, Fei Sheng, Shanjun Song, Penghui Li, \Shaoqing, Bin Wang, Dawei Lu, Luyao Zhang, Xuezhi Yang, Kuo Yang, Sijin Liu, Aiqian Zhang, Qian Liu, Guibin Jiang.
-    Two-dimensional copper fingerprints in blood as biomarker for bladder cancer with machine learning.
+    Peng Jia, Tong Wu, \Shaoqing, Ross C. Brownson, Yan Kestens, Miyang Luo, Shiyong Liu,  Jing Su, Gordon G. Liu, Shujuan Yang.
+    Impacts of and vulnerability to the COVID-19 pandemic.
     \textit{}. 
     (\Submitted).
 \item
-    Peng Jia, Tong Wu, Ross C. Brownson, Yan Kestens, Miyang Luo, Shiyong Liu, \Shaoqing, Jing Su, Gordon G. Liu, Shujuan Yang.
-    Impacts of and vulnerability to the COVID-19 pandemic: a planetary health perspective.
-    \textit{Engineering}. 
-    (\Review).
-\item
-    Yupeng Liu, Jiajia Li, Weiqiang Chen, Lulu Song, \Shaoqing.
-    Quantifying Urban Weight Gain And Loss by A GIS-based Material Stocks And Flows Analysis.
-    \textit{Journal of Industrial Ecology}. 
-    (\Review).
+    Yunfeng Tian, Shudi Zuo, Jiaheng Ju, \Shaoqing, Yin Ren, Panfeng Dou.
+    Local carbon emission zone construction in the highly urbanized regions: Application of residential and transport CO$_2$ emissions in Shanghai, China.
+    \textit{Building and Environment}.
+    (\Review). 
 %\end{etaremune}
 \end{enumerate}
