--- a/cnlatex/software.tex
+++ b/cnlatex/software.tex
@@ -6,3 +6,4 @@
 \mycvitemcomment{自2019}{rgeoda}{rgeoda是一个基于libgeoda和GeoDa的空间数据分析R包(开源贡献者)}
 \mycvitemcomment{自2020}{COVID-19仪表盘shiny应用}{(基于R shiny开发的COVID-19疫情仪表盘应用. \myurl{https://gisersqdai.shinyapps.io/COVID19VIS/})}
 \mycvitemcomment{自2020}{Awesome COVID-19}{COVID-19资源合集. \myurl{http://covid19.gisersqdai.top/en-us/}}
+\mycvitemcomment{自2023}{MetS score calculator shiny app}{用于计算代谢综合征的计算器. \myurl{https://gisersqdai.shinyapps.io/mets_severiity_calculator/}}
