--- a/software.tex
+++ b/software.tex
@@ -6,3 +6,4 @@
 \mycvitemcomment{from 2019}{rgeoda}{rgeoda is a R package for spatial data analysis based on libgeoda and GeoDa(contributor).}
 \mycvitemcomment{from 2020}{COVID-19 Dashboard shiny app}{A developed dashboard shiny app about COVID-19. \myurl{https://gisersqdai.shinyapps.io/COVID19VIS/}}
 \mycvitemcomment{from 2020}{Awesome COVID-19}{Resources of COVID-19 research. \myurl{http://covid19.gisersqdai.top/en-us/}}
+\mycvitemcomment{from 2023}{MetS score calculator shiny app}{A shiny app to calculate MetS score. \myurl{https://gisersqdai.shinyapps.io/mets_severiity_calculator/}}
