--- a/presentation.tex
+++ b/presentation.tex
@@ -1,4 +1,6 @@
 \section{\texorpdfstring{\faCommentsO\ Presentations}{Presentations}}
+\mycvitemXP{2023.05.19}{Seeking your interest and going ahead will contribute to success(\textbf{invited})}{Class 3, Senior 1,Xiamen No.1 High School of Fujian}{Xiamen No.1 High School of Fujian, Xiamen, China}
+\mycvitemXP{2022.08.18}{Do neighborhood boundaries matter for examining the associations between environmental factors and obesity(\textbf{invited})}{The 29th International Conference on Geoinformatics in 2022 session 10-2 GIScience for Public Health}{China University of Geosciences(Beijing),Beijing, China}
 \mycvitemXP{2020.12.12}{The Evaluation of Health Effect of Short-term Exposure to PM2.5 during Spring Festival: A Case Study of 25 Cities in the Yangtze River Delta(\textbf{invited})}{The Workshop of 16th Spatial Behavior and Planning \& Digitalization and Fine-Grained Governance}{Xiamen University, Xiamen, China}
 \mycvitemXP{2020.08.07}{What is geography? From coronavirus disease 2019 to Bei Dou Systems(\textbf{invited})}{Geography lecture group,Tong An No.1 High School of Fujian}{Tong An No.1 High School of Fujian, Xiamen, China}
 \mycvitemXP{2018.05.27}{The Scale Effect, Zoning Effect of Geographical Features, the Modified Areal Unit Problem and the Chanlleges of Spatial Stastistics}{11th Chinese R Language Conference}{Renmin University of China, Beijing, China}
