--- a/publications.tex
+++ b/publications.tex
@@ -13,35 +13,65 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
+    Peng Jia, Yuanyuan Shi, Qi Jiang, \Shaoqing,Bin Yu, Shuhan Yang, Ge Qiu, Shujuan Yang. (2023).
+    Environmental determinants of childhood obesity: a meta-analysis.
+    \textit{The Lancet Global Health}. \textit{11}, S7.
+    \DOI{10.1016/S2214-109X(23)00092-X}. [SCI, IF = 34.3].
+\item
+    Shudi Zuo, \Shaoqing, Jiaheng Ju, Fanxin Meng, Yin Ren, Yunfeng Tian, Kaide Wang. (2022).
+    The importance of the functional mixed entropy for the explanation of residential and transport CO$_2$ emissions in the urban center of China.
+    \textit{Journal of Cleaner Production}. \textit{380}, 134947.
+    \DOI{10.1016/j.jclepro.2022.134947}. [SCI, IF = 11.1].
+\item
+    Pengxin Zhang, Shuhan Yang, \Shaoqing, Darren How Jin Aik, Shujuan Yang, Peng Jia. (2022).
+    Global spreading of Omicron variant of COVID-19.
+    \textit{Geospatial Health}. \textit{17}.
+    \DOI{10.4081/gh.2022.1083}. [SCI, IF = 1.7].
+\item
+    Yupeng Liu, Jiajia Li, Weiqiang Chen, Lulu Song, \Shaoqing. (2022).
+    Quantifying urban mass gain and loss by a GIS‐based material stocks and flows analysis.
+    \textit{Journal of Industrial Ecology}. \textit{26}(3), 1051-1060.
+    \DOI{10.1111/jiec.13252}. [SCI, IF = 5.9].
+\item
+    Weichao Wang, Xian Liu, Changwen Zhang, Fei Sheng, Shanjun Song, Penghui Li, \Shaoqing, Bin Wang, Dawei Lu, Luyao Zhang, Xuezhi Yang, Zhihong Zhang, Sijin Liu, Aiqian Zhang, Qian Liu, Guibin Jiang. (2022).
+    Identification of two-dimensional copper signatures in human blood for bladder cancer with machine learning.
+    \textit{Chemical Science}. \textit{13}(6), 1648-1656.
+    \DOI{10.1039/D1SC06156A}. [SCI, IF = 8.4].
+\item
+    \Shaoqing\CF, Xiaoman Zheng\CF, Lei Gao, Chengdong Xu, Shudi Zuo, Qi Chen, Xiaohua Wei, Yin Ren. (2021).
+    Improving plot-level model of forest biomass: A combined approach using machine learning with spatial statistics.
+    \textit{Forests}. \textit{12}(12), 1663.
+    \DOI{10.3390/f12121663}. [SCI, IF = 2.9].
+\item
     Peng Jia, \Shaoqing, Tong Wu, Shujuan Yang. (2021).
     New approaches to anticipate the risk of reverse zoonosis.
     \textit{Trends in Ecology \& Evolution}. \textit{36}(7), 580-590.
-    \DOI{10.1016/j.tree.2021.03.012}. [SCI, IF = 17.712].
+    \DOI{10.1016/j.tree.2021.03.012}. [SCI, IF = 16.8].
 \item
     Panfeng Dou, Shudi Zuo, Yin Ren, Manuel J. Rodriguez, \Shaoqing. (2021).
     Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
     \textit{Journal of Environmental Management}. \textit{290}, 112588.
-    \DOI{10.1016/j.jenvman.2021.112588}. [SCI, IF = 6.789].
+    \DOI{10.1016/j.jenvman.2021.112588}. [SCI, IF = 8.7].
 \item
     Shujuan Yang, \Shaoqing, Yuling Huang, Peng Jia. (2021).
     Pitfalls in Modeling Asymptomatic COVID-19 Infection.
     \textit{Frontiers in Public Health}. \textit{9}, 593176.
-    \DOI{10.3389/fpubh.2021.593176}. [SCI, IF = 3.709].
+    \DOI{10.3389/fpubh.2021.593176}. [SCI, IF = 5.2].
 \item
     Lulu Song, \Shaoqing, Zhi Cao, Yupeng Liu, Weiqiang Chen. (2021).
     High spatial resolution mapping of steel resources accumulated above ground in mainland China: Past trends and future prospects.
     \textit{Journal of Cleaner Production}. \textit{297}, 144609.
-    \DOI{10.1016/j.jclepro.2021.126482}. [SCI, IF = 9.297].
+    \DOI{10.1016/j.jclepro.2021.126482}. [SCI, IF = 11.1].
 \item
     Shudi Zuo, Lianping Yang, Panfeng Dou, Hung Chak Ho, \Shaoqing, Wenjun Ma, Yin Ren, Cunrui Huang. (2020).
     The direct and interactive impacts of hydrological factors on bacillary dysentery across different geographical regions in central China.
     \textit{Science of the Total Environment}. \textit{764}, 144609.
-    \DOI{10.1016/j.scitotenv.2020.144609}. [SCI, IF = 7.963].
+    \DOI{10.1016/j.scitotenv.2020.144609}. [SCI, IF = 9.8].
 \item
     \Shaoqing\CF, Yin Ren\CF, Shudi Zuo, Chengyi Lai, Jiajia Li, Shengyu Xie, Bingchu Chen. (2020).
     Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China. 
     \textit{Remote Sensing}. \textit{12}(23), 3932.
-    \DOI{10.3390/rs12233932}. [SCI, IF = 4.848].
+    \DOI{10.3390/rs12233932}. [SCI, IF = 5.0].
 \item
     \Shaoqing, Jiajia Li, WeiXu Yang, Fangyu Chen, Huixian Jiang. (2020).
     The Evaluation of Health Effect of Short-term Exposure to PM2.5 during Spring Festival: A Case Study of 25 Cities in the Yangtze River Delta.
@@ -51,42 +81,42 @@
     Peng Jia, \Shaoqing, Kristen. E. Rohli, Robert V. Rohli, Yanan Ma, Chao Yu, Xiongfeng Pan, Weiqi Zhou. (2020).
     Natural environment and childhood obesity: A systematic review.
     \textit{Obesity Reviews}. 1-9.
-    \DOI{10.1111/obr.13097}. [SCI, IF = 9.213].
+    \DOI{10.1111/obr.13097}. [SCI, IF = 8.9].
 \item
     XiaoFang Pan, Hu Li, Lixin Zhao, Xiaoru Yang, Jianqiang Su, \Shaoqing, Jing Ning, Chunxing Li, Guanjing Cai, GeFu Zhu. (2020).
     Response of syntrophic bacterial and methanogenic archaeal communities in paddy soil to soil type and phenological period of rice growth.
     \textit{Journal of Cleaner Production}. \textit{278}, 123418.
-    \DOI{10.1016/j.jclepro.2020.123418}. [SCI, IF = 9.297].
+    \DOI{10.1016/j.jclepro.2020.123418}. [SCI, IF = 11.1].
 \item
     Peng Jia, Xinxi Cao, Hongxi Yang, \Shaoqing, Pan He, Ganlin Huang, Tong Wu, Yaogang Wang. (2020).
     Green space access in the neighbourhood and childhood obesity.
     \textit{Obesity Reviews}. 1-12.
-    \DOI{10.1111/obr.13100}. [SCI, IF = 9.213].
+    \DOI{10.1111/obr.13100}. [SCI, IF = 8.9].
 \item
     Miyang Luo, Hanqi Li, Xiongfeng Pan, Teng Fei, \Shaoqing, Ge Qiu, Yuxuan Zou, Heleen Vos, Jiayou Luo, Peng Jia. (2020).
     Neighbourhood speed limit and childhood obesity.
     \textit{Obesity Reviews}. 1-11.
-    \DOI{10.1111/obr.13052}. [SCI, IF = 9.213].
+    \DOI{10.1111/obr.13052}. [SCI, IF = 8.9].
 \item
     Shengyu Xie, Guangwei Yu, Chunxing Li, Jie Li, Gang Wang, \Shaoqing, Yin Wang. (2020).
     Treatment of high-ash industrial sludge for producing improved char with low heavy metal toxicity.
     \textit{Journal of Analytical and Applied Pyrolysis}. \textit{150}, 104866.
-    \DOI{10.1016/j.jaap.2020.104866}. [SCI, IF = 5.541].
+    \DOI{10.1016/j.jaap.2020.104866}. [SCI, IF = 6.0].
 \item
     Xiongfeng Pan, Li Zhao, Jiayou Luo, Yinhao Li, Lin Zhang, Tong Wu, Melody Smith, \Shaoqing, Peng Jia. (2020).
     Access to bike lanes and childhood obesity: A systematic review and meta‐analysis.
     \textit{Obesity Reviews}. 1-11.
-    \DOI{10.1111/obr.13042}. [SCI, IF = 9.213].
+    \DOI{10.1111/obr.13042}. [SCI, IF = 8.9].
 \item
     \Shaoqing, Shudi Zuo, Yin Ren. (2020).
     A spatial database of CO$_2$ emissions, urban form fragmentation and city-scale effect related impact factors for the low carbon urban system in Jinjiang city, China.
     \textit{Data in Brief}. \textit{29}, 105274.
-    \DOI{10.1016/j.dib.2020.105274}. [ESCI, CiteScore = 1.7].
+    \DOI{10.1016/j.dib.2020.105274}. [ESCI, IF = 1.2].
 \item
     Shudi Zuo, \Shaoqing, Yin Ren. (2019).
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
     \textit{Journal of Cleaner Production}. \textit{244}, 118659.
-    \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 9.297].
+    \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 11.1].
 \item
     Panfeng Dou, Shudi Zuo, Yin Ren, \Shaoqing, Guoliang Yun. (2019).
     The impacts of climate and land use/land cover changes on water yield service in Ningbo region.
@@ -96,22 +126,22 @@
     Qing Yang, Tianyue Huang, Saige Wang, Jiashuo Li, \Shaoqing, Sebastian Wright, Yuxuan Wang, Huaiwu Peng. (2019).
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
     \textit{Applied Energy}. \textit{247}, 254-269.
-    \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 9.746].
+    \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 11.2].
 \item
     Guoliang Yun, Yuanrong He, Yuantong Jiang, Panfeng Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
     \textit{Atmosphere}. \textit{10}(2), 55.
-    \DOI{10.3390/atmos10020055}. [SCI, IF = 2.686].
+    \DOI{10.3390/atmos10020055}. [SCI, IF = 2.9].
 \item
     Shudi Zuo, \Shaoqing, Xiaodong Song, Chengdong Xu, Yilan Liao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren. (2018).
     Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models. 
     \textit{Remote Sensing}. \textit{10}(11), 1814.
-    \DOI{10.3390/rs10111814}. [SCI, IF = 4.848].
+    \DOI{10.3390/rs10111814}. [SCI, IF = 5.0].
 \item
     Shudi Zuo, \Shaoqing, Yaying Li, Jianfeng Tang, Yin Ren. (2018).
 	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
     \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175.
-    \DOI{10.3390/ijerph15102175}. [SCI, IF = 3.390].
+    \DOI{10.3390/ijerph15102175}. [SSCI, IF = 4.614].
 \item
     \Shaoqing, Huixian Jiang, Jiajia Li, Xian Su, Juan Wu, Yin Ren. (2018).
 	Influence of walking environment on robbery, snatch and theft crime in urban area, H city, China.
@@ -121,7 +151,7 @@
     Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren. (2018).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
     \textit{Remote Sensing}. \textit{10}(4), 521.
-    \DOI{10.3390/rs10040521}. [SCI, IF = 4.848].
+    \DOI{10.3390/rs10040521}. [SCI, IF = 5.0].
 \item
     Qin Ye, Gang Zeng, \Shaoqing, Fenglong Wang. (2018).
 	Research on the effects of different policy tools on China’s emissions reduction innovation.
@@ -131,7 +161,7 @@
     Qin Ye, \Shaoqing, Gang Zeng. (2017).
 	Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
     \textit{Chinese Journal of Population Resources and Environment}. \textit{16}(1), 1-11.
-    \DOI{10.1080/10042857.2017.1418273}. [ESCI, CiteScore = 2.7].
+    \DOI{10.1080/10042857.2017.1418273}. [ESCI, IF = 9.3].
 \item
     Miaoyi Li, \Shaoqing, Jingyuan Wang, Zhenjiang Shen. (2016).
 	The Analysis of Urban Spatial Development Pattern in Beijing Based on the Big Data of Government.
@@ -162,15 +192,12 @@
 \item
      Yin Ren, Xiaoman Zheng, \Shaoqing, Qi Chen, Shudi Zuo.
      Improving the accuracy of forest biomass estimate using source analysis and machine learning.
-     (\Review).
 \item
      Yin Ren, \Shaoqing, Shudi Zuo, Xiaoman Zheng.
      A forest inventory biomass estimation model by multi-sources data fusion.
-     (\Review).
 \item
      Qi Chen, Yin Ren, Xiaoman Zheng, Shudi Zuo, \Shaoqing.
      A mixed-effect model for estimation of large area subtropical forest biomass.
-     (\Review).
 %\end{etaremune}
 \end{enumerate}
 
@@ -253,29 +280,34 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    \Shaoqing\CF, Xiaoman Zheng\CF, Lei Gao, Chengdong Xu, Shudi Zuo, Qi Chen, Xiaohua Wei, Yin Ren.
-    Improving plot-level model of forest aboveground biomass: A combined approach using machine learning with spatial statistics.
-    \textit{Ecosphere}. 
+    \Shaoqing, Alfred Stein, Yuchen Li, Shujuan Yang, Peng Jia.
+    Street view imagery for built environment auditing: a systematic review.
+    \textit{International Journal of Geographical Information Science}. 
+    (\Revision).
+\item
+    \Shaoqing, Wufan Zhao, Yanwen Wang, Xiao Huang, Zhidong Chen, Jinghan Lei, Alfred Stein, Peng Jia.
+    Assessing Spatiotemporal Bikeability Using Multi-Source Geospatial Big Data: A Case Study of Xiamen, China.
+    \textit{International Journal of Applied Earth Observation and Geoinformation}. 
     (\Review).
+\item
+    \Shaoqing, Frank Badu Osei, Peng Jia, Alfred Stein.
+    Mapping of hourly street-level PM2.5 concentrations using an ensemble-random forest model and multi-source geospatial data.
+    \textit{Environmental Science \& Technology}. 
+    (\Submitted).
 \item
     Xiaoman Zheng, \Shaoqing, Qi Chen, Kim Calders, Chengdong Xu, Xiaohua Wei, Mazhan Zhuang, Yin Ren.
     Integrating Spatial Statistics and Machine Learning to Analyze Error Sources in Estimating Forest Aboveground Biomass from Airborne LiDAR Data.
-    \textit{Agricultural and Forest Meteorology}. 
+    \textit{}. 
     (\Revision).
 \item
-    Weichao Wang, Xian Liu, Changwen Zhang, Fei Sheng, Shanjun Song, Penghui Li, \Shaoqing, Bin Wang, Dawei Lu, Luyao Zhang, Xuezhi Yang, Kuo Yang, Sijin Liu, Aiqian Zhang, Qian Liu, Guibin Jiang.
-    Two-dimensional copper fingerprints in blood as biomarker for bladder cancer with machine learning.
+    Peng Jia, Tong Wu, \Shaoqing, Ross C. Brownson, Yan Kestens, Miyang Luo, Shiyong Liu,  Jing Su, Gordon G. Liu, Shujuan Yang.
+    Impacts of and vulnerability to the COVID-19 pandemic.
     \textit{}. 
     (\Submitted).
 \item
-    Peng Jia, Tong Wu, Ross C. Brownson, Yan Kestens, Miyang Luo, Shiyong Liu, \Shaoqing, Jing Su, Gordon G. Liu, Shujuan Yang.
-    Impacts of and vulnerability to the COVID-19 pandemic: a planetary health perspective.
-    \textit{Engineering}. 
-    (\Review).
-\item
-    Yupeng Liu, Jiajia Li, Weiqiang Chen, Lulu Song, \Shaoqing.
-    Quantifying Urban Weight Gain And Loss by A GIS-based Material Stocks And Flows Analysis.
-    \textit{Journal of Industrial Ecology}. 
+    Yunfeng Tian, Shudi Zuo, Jiaheng Ju, \Shaoqing, Yin Ren, Panfeng Dou.
+    Local carbon emission zone construction in the highly urbanized regions: Application of residential and transport CO$_2$ emissions in Shanghai, China.
+    \textit{Building and Environment}. 
     (\Review).
 %\end{etaremune}
 \end{enumerate}
