--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -192,13 +192,16 @@
 \begin{enumerate}
 \item
      任引, 郑小曼, {\heiti{戴劭勍}}, 陈奇, 左舒翟.
-     结合源解析与机器学习以提升森林生物量的估算精度..
+     结合源解析与机器学习以提升森林生物量的估算精度.
+     \textit{CN111814397A}. (2020).
 \item
      任引, {\heiti{戴劭勍}}, 左舒翟, 郑小曼.
      一种多源数据融合的森林资源清查生物量估算模型.
+     \textit{CN110162872A}. (2019).
 \item
      陈奇, 任引, 郑小曼, 左舒翟, {\heiti{戴劭勍}}.
-     一种预测大面积亚热带森林生物量的混合效应模型..
+     一种预测大面积亚热带森林生物量的混合效应模型.
+     \textit{CN108959705A}. (2018).
 %\end{etaremune}
 \end{enumerate}
 
