--- a/publications.tex
+++ b/publications.tex
@@ -192,12 +192,15 @@
 \item
      Yin Ren, Xiaoman Zheng, \Shaoqing, Qi Chen, Shudi Zuo.
      Improving the accuracy of forest biomass estimate using source analysis and machine learning.
+     \textit{CN111814397A}. (2020).
 \item
      Yin Ren, \Shaoqing, Shudi Zuo, Xiaoman Zheng.
      A forest inventory biomass estimation model by multi-sources data fusion.
+     \textit{CN110162872A}. (2019).
 \item
      Qi Chen, Yin Ren, Xiaoman Zheng, Shudi Zuo, \Shaoqing.
      A mixed-effect model for estimation of large area subtropical forest biomass.
+     \textit{CN108959705A}. (2018).
 %\end{etaremune}
 \end{enumerate}
 
